deriver cleanup